--- a/css/style-index.css
+++ b/css/style-index.css
@@ -9,6 +9,11 @@ body {
   margin: 0 auto;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -29,6 +34,8 @@ body {
   border: 1px solid #802c6e;
   border-right: none;
   height: 30px;
+  border-bottom-left-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
 }
 
 .searchBar input:focus {
@@ -39,6 +46,16 @@ body {
   border: 1px solid #802c6e;
   border-left: none;
   background-color: rgb(253, 152, 152);
+  border-bottom-right-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.searchBar button:hover {
+  cursor: pointer;
+}
+
+.searchBar img {
+  max-width: 90%;
 }
 
 .header-logo img {
@@ -67,7 +84,7 @@ body {
 }
 
 .main {
-  padding-top: 30px;
+  padding-top: 2%;
 }
 
 .intro {
@@ -80,7 +97,7 @@ body {
 .introDes {
   max-width: 50%;
   flex-basis: 50%;
-  margin-top: 150px;
+  margin-top: 5%;
 }
 
 .introDes h1 {
@@ -118,7 +135,7 @@ body {
   text-decoration: none;
   color: white;
   border-radius: 0.25rem;
-  width: 150px;
+  width: 120px;
   height: auto;
 }
 
@@ -126,8 +143,17 @@ body {
   background-color: rgb(107, 28, 138);
 }
 
+.catalogue:hover {
+  opacity: 0.8;
+}
+
 .github {
   background-color: #f7aa35;
+}
+
+.github:hover {
+
+  opacity: 0.8;
 }
 
 .discounts {
@@ -137,7 +163,6 @@ body {
 }
 
 .discountTitle {
-  border-top: 1px solid black;
   color: #802c6e;
 }
 
@@ -153,6 +178,66 @@ body {
 
 .img img {
   width: 20%;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  background-color: #f5f5f5;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 30%;
+}
+
+.footer h1 {
+  color: #802c6e;
+}
+
+.footerDes {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+}
+
+
+.footerDes img {
+  max-width: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0%;
+  margin-bottom: 2%;
+}
+
+.footerDes p {
+  margin: 1%;
+}
+
+.footerServs {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+}
+
+.footerServs h1 {
+  margin-bottom: 0px;
+}
+
+.footerServs ul li {
+  margin: 5%;
+}
+
+.footerContact {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+}
+
+.footerContact p {
+  margin: 2%;
 }
 
 * {
