--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #f0f0f0;
+}
+
 .main {
     width: 100%;
     display: flex;
@@ -5,12 +9,24 @@
 }
 
 .sidebar {
-    text-align: justify;
     width: 15%;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
+    height: max-content;
+    border-radius: 0 0 2px 2px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);;
 }
 
 .sidebar h3 {
+    margin: 0%;
+    padding: 10%;
+}
+
+.sidebar input{
+    list-style-type: none;
+    margin: 5%;
+}
+
+.sidebarContent {
     padding: 10%;
 }
 
@@ -30,13 +46,18 @@
 
 .card {
     text-align: center;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     max-width: 30%;
     border-radius: 0.5em;
+    box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card ul {
-    text-align: left;
+    text-align: center;
 }
 
 .card ul li {
