--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -13,7 +13,8 @@ body {
     background-color: #ffffff;
     height: max-content;
     border-radius: 0 0 2px 2px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    ;
 }
 
 .sidebar h3 {
@@ -21,7 +22,7 @@ body {
     padding: 10%;
 }
 
-.sidebar input{
+.sidebar input {
     list-style-type: none;
     margin: 5%;
 }
@@ -49,8 +50,7 @@ body {
     background-color: #ffffff;
     max-width: 30%;
     border-radius: 0.5em;
-    box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
-
+    box-shadow: 0 .5em 1em -.125em rgba(10, 10, 10, .1), 0 0 0 1px rgba(10, 10, 10, .02);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -58,6 +58,7 @@ body {
 
 .card ul {
     text-align: center;
+    padding: 5%;
 }
 
 .card ul li {
